# gsescrapperpipeline

./: .gitignore  0001_initial.py  README.md  alembic.ini  docker-compose.yml  gse_complete_20260319_181550.csv  gse_partial_20260318_064725.csv  gse_partial_20260319_003226.csv  gse_partial_20260319_011440.csv  gse_partial_20260319_020251.csv  gse_partial_20260319_031633.csv  gse_partial_20260319_032347.csv  gse_scrape.py  historical_scraper.py  pyproject.toml  pyrightconfig.json  requirements.txt  scrapper.py
app/: main.py  routes_market.py  routes_scraper.py
app/api/dependencies/: cache.py
app/api/v1/: schemas.py
app/api/v1/endpoints/: health.py  market.py  scraper.py
app/core/: config.py  logging.py
app/db/: database.py
app/db/models/: models.py
app/db/repositories/: repositories.py
app/scheduler/: scheduler.py
app/scraper/: browser_scraper.py  gse_scraper.py  pipeline.py
app/utils/: alerting.py
logs/: gse-scraper.log.2026-03-13
migrations/: env.py
migrations/versions/: 0001_initial.py
